# langgraph

test01/: README.md  main.py  pyproject.toml  t2.py
test02/: README.md  main.py  pyproject.toml  t01.ipynb  t03.ipynb  t04.ipynb  t05.ipynb  t06.ipynb
test02/.ipynb_checkpoints/: t01-checkpoint.ipynb  t02-checkpoint.ipynb  t04-checkpoint.ipynb
