[project]
name = "test02"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipython>=8.37.0",
    "jupyterlab>=4.4.5",
    "langchain-tavily>=0.2.11",
    "langchain[anthropic]>=0.3.27",
    "langgraph>=0.6.3",
    "langsmith>=0.4.10",
]
